# strpdatetime

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_DEV.md  pyproject.toml  strpdatetime.py  strptime.py  test_regression_datetime_strptime.py  test_strpdatetime.py
.github/workflows/: python-package.yml
src/strpdatetime/: __init__.py  __main__.py  strpdatetime.py
tests/: test_regression_strpdatetime.py  test_strpdatetime.py
