[tool.poetry]
name = "strpdatetime"
version = "0.1.0"
description = "Parse strings into Python datetime objects; extends Python's datetime.strptime() with additional features."
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "Python Software Foundation License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textX = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mypy = "^0.10.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
