[project]
name = "strpdatetime"
version = "0.3.0"
description = "Parse strings into Python datetime objects; extends Python's datetime.strptime() with additional features."
readme = "README.md"
requires-python = ">=3.9"
license = "Python Software Foundation License"
authors = [
    { name = "Rhet Turnbull", email = "rturnbull+git@gmail.com" },
]
dependencies = [
    "textX>=4.0.1,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0,<8.0.0",
    "pytest-mypy>=0.10.1,<0.11.0",
    "mypy>=0.991,<0.992",
]
