[project]
name = "strpdatetime"
version = "0.4.0"
description = "Parse strings into Python datetime objects; extends Python's datetime.strptime() with additional features."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Rhet Turnbull", email = "rturnbull+git@gmail.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Python Software Foundation License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = ["textX>=4.0.1,<5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0,<8.0.0",
    "pytest-mypy>=0.10.1,<0.11.0",
    "mypy>=0.991,<0.992",
]
